redmine_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  selector:
    app: redmine
  ports: 
    - name: redmine
      port: 3002
      nodePort: 30030
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
  type: ClusterIP
